--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,9 @@ author: conFuchsian
 email: fuschia_sage@protonmail.com
 theme: minima
 description: > # this means to ignore newlines until "baseurl:"
-A placeholder description, for now
- Write an awesome description for your new site here. You can edit this
+"A placeholder text, for now. You can edit this
   line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Google search results) and in your feed.xml site description."
 
 # social links
 twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
