--- a/_config.yml
+++ b/_config.yml
@@ -2,13 +2,10 @@ title: Learning Git and GitHub
 author: conFuchsian
 email: fuschia_sage@protonmail.com
 theme: minima
-description: > # this means to ignore newlines until "baseurl:"
-"A placeholder text, for now. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description."
+description: A header with a body of text describing my experience with GitHub
 
 # social links
 twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
-github_username:  conFuchsian # DO NOT include the @ character, or else the build will fail!
+github_username: conFuchsian # DO NOT include the @ character, or else the build will fail!
 
 show_excerpts: true # set to false to remove excerpts on the homepage
