--- a/_config.yml
+++ b/_config.yml
@@ -8,4 +8,4 @@ description: “Even if you fall on your face you’re still moving forward.”
 twitter_username: Twitter # DO NOT include the @ character, or else the build will fail!
 github_username: conFuchsian # DO NOT include the @ character, or else the build will fail!
 
-show_excerpts: false # set to false to remove excerpts on the homepage
+show_excerpts: true # set to false to remove excerpts on the homepage
